--- a/src/main/resources/messages_da_DK.properties
+++ b/src/main/resources/messages_da_DK.properties
@@ -1,59 +1,59 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr=left to right, rtl = right to left)
+# the direction that the language is written (ltr = left to right, rtl = right to left)
 language.direction=ltr
 
-pdfPrompt=Select PDF(s)
-multiPdfPrompt=Select PDFs (2+)
-multiPdfDropPrompt=Select (or drag & drop) all PDFs you require
-imgPrompt=Select Image(s)
-genericSubmit=Submit
-processTimeWarning=Warning: This process can take up to a minute depending on file-size
+pdfPrompt=Vælg PDF-fil(er)
+multiPdfPrompt=Vælg PDF-filerne (2+)
+multiPdfDropPrompt=Vælg (eller drag & drop) alle PDF-filerne du skal bruge
+imgPrompt=Vælg Billede(r)
+genericSubmit=Indsend
+processTimeWarning=Advarsel: Denne proces kan tage op til et helt minut, alt efter størrelsen på filen
 pageOrderPrompt=Custom Page Order (Enter a comma-separated list of page numbers or Functions like 2n+1) :
 pageSelectionPrompt=Custom Page Selection (Enter a comma-separated list of page numbers 1,5,6 or Functions like 2n+1) :
-goToPage=Go
-true=True
-false=False
-unknown=Unknown
-save=Save
+goToPage=Gå
+true=Sandt
+false=Falsk
+unknown=Ukendt
+save=Gem
 saveToBrowser=Save to Browser
-close=Close
-filesSelected=files selected
-noFavourites=No favorites added
-downloadComplete=Download Complete
-bored=Bored Waiting?
-alphabet=Alphabet
+close=Luk
+filesSelected=Filer valgt
+noFavourites=Ingen favoritter tilføjet
+downloadComplete=Download fuldført
+bored=Træt af at vente?
+alphabet=Alfabet
 downloadPdf=Download PDF
-text=Text
+text=Tekst
 font=Font
-selectFillter=-- Select --
-pageNum=Page Number
-sizes.small=Small
-sizes.medium=Medium
-sizes.large=Large
-sizes.x-large=X-Large
+selectFillter=-- Vælg --
+pageNum=Sidenummer
+sizes.small=Lille
+sizes.medium=Mellem
+sizes.large=Stor
+sizes.x-large=X-Stor
 error.pdfPassword=The PDF Document is passworded and either the password was not provided or was incorrect
-delete=Delete
-username=Username
-password=Password
-welcome=Welcome
+delete=Slet
+username=Brugernavn
+password=Adgangskode
+welcome=Velkommen
 property=Property
-black=Black
-white=White
-red=Red
-green=Green
-blue=Blue
+black=Sort
+white=Hvis
+red=Rød
+green=Græn
+blue=Blå
 custom=Custom...
 WorkInProgess=Work in progress, May not work or be buggy, Please report any problems!
 poweredBy=Powered by
-yes=Yes
-no=No
+yes=Ja
+no=Nej
 changedCredsMessage=Credentials changed!
-notAuthenticatedMessage=User not authenticated.
-userNotFoundMessage=User not found.
-incorrectPasswordMessage=Current password is incorrect.
-usernameExistsMessage=New Username already exists.
+notAuthenticatedMessage=Bruger ikke autoriseret.
+userNotFoundMessage=Bruger ikke fundet.
+incorrectPasswordMessage=Nuværende adgangskode er forkert.
+usernameExistsMessage=Nyt brugernavn findes allerede.
 invalidUsernameMessage=Invalid username, username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 confirmPasswordErrorMessage=New Password and Confirm New Password must match.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
@@ -62,15 +62,15 @@ downgradeCurrentUserMessage=Cannot downgrade current user's role
 downgradeCurrentUserLongMessage=Cannot downgrade current user's role. Hence, current user will not be shown.
 userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
 userAlreadyExistsWebMessage=The user already exists as an web user.
-error=Error
-oops=Oops!
-help=Help
-goHomepage=Go to Homepage
+error=Fejl
+oops=Ups!
+help=Hjælp
+goHomepage=Gå til hovedsiden
 joinDiscord=Join our Discord server
-seeDockerHub=See Docker Hub
-visitGithub=Visit Github Repository
-donate=Donate
-color=Color
+seeDockerHub=Se Docker Hub
+visitGithub=Besøg Github Repository
+donate=Donér
+color=Farve
 sponsor=Sponsor
 info=Info
 
@@ -204,9 +204,9 @@ database.info_1=When importing data, it is crucial to ensure the correct structu
 database.info_2=The file name does not matter when uploading. It will be renamed afterward to follow the format backup_user_yyyyMMddHHmm.sql, ensuring a consistent naming convention.
 database.submit=Import Backup
 database.importIntoDatabaseSuccessed=Import into database successed
-database.fileNotFound=File not Found
+database.fileNotFound=File not found
 database.fileNullOrEmpty=File must not be null or empty
-database.failedImportFile=Failed Import File
+database.failedImportFile=Failed to import file
 
 #############
 # HOME-PAGE #
@@ -244,7 +244,7 @@ home.pdfToImage.title=PDF to Image
 home.pdfToImage.desc=Convert a PDF to a image. (PNG, JPEG, GIF)
 pdfToImage.tags=conversion,img,jpg,picture,photo
 
-home.pdfOrganiser.title=Organize
+home.pdfOrganiser.title=Organise
 home.pdfOrganiser.desc=Remove/Rearrange pages in any order
 pdfOrganiser.tags=duplex,even,odd,sort,move
 
@@ -365,7 +365,7 @@ home.scalePages.title=Adjust page size/scale
 home.scalePages.desc=Change the size/scale of a page and/or its contents.
 scalePages.tags=resize,modify,dimension,adapt
 
-home.pipeline.title=Pipeline
+home.pipeline.title=Pipeline (Advanced)
 home.pipeline.desc=Run multiple actions on PDFs by defining pipeline scripts
 pipeline.tags=automate,sequence,scripted,batch-process
 
@@ -417,7 +417,7 @@ home.extractPage.desc=Extracts select pages from PDF
 extractPage.tags=extract
 
 
-home.PdfToSinglePage.title=Single Large Page
+home.PdfToSinglePage.title=PDF to Single Large Page
 home.PdfToSinglePage.desc=Merges all PDF pages into one large single page
 PdfToSinglePage.tags=single page
 
@@ -455,11 +455,11 @@ AddStampRequest.tags=Stamp, Add image, center image, Watermark, PDF, Embed, Cust
 
 home.PDFToBook.title=PDF to Book
 home.PDFToBook.desc=Converts PDF to Book/Comic formats using calibre
-PDFToBook.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle
+PDFToBook.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle,epub,mobi,azw3,docx,rtf,txt,html,lit,fb2,pdb,lrf
 
 home.BookToPDF.title=Book to PDF
 home.BookToPDF.desc=Converts Books/Comics formats to PDF using calibre
-BookToPDF.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle
+BookToPDF.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle,epub,mobi,azw3,docx,rtf,txt,html,lit,fb2,pdb,lrf
 
 
 ###########################
@@ -488,7 +488,7 @@ login.oauth2InvalidIdToken=Invalid Id Token
 #auto-redact
 autoRedact.title=Auto Redact
 autoRedact.header=Auto Redact
-autoRedact.colorLabel=Color
+autoRedact.colorLabel=Colour
 autoRedact.textsToRedactLabel=Text to Redact (line-separated)
 autoRedact.textsToRedactPlaceholder=e.g. \nConfidential \nTop-Secret
 autoRedact.useRegexLabel=Use Regex
@@ -743,7 +743,7 @@ repair.submit=Repair
 
 #flatten
 flatten.title=Flatten
-flatten.header=Flatten PDFs
+flatten.header=Flatten PDF
 flatten.flattenOnlyForms=Flatten only forms
 flatten.submit=Flatten
 
@@ -827,8 +827,8 @@ merge.submit=Merge
 
 
 #pdfOrganiser
-pdfOrganiser.title=Page Organizer
-pdfOrganiser.header=PDF Page Organizer
+pdfOrganiser.title=Page Organiser
+pdfOrganiser.header=PDF Page Organiser
 pdfOrganiser.submit=Rearrange Pages
 pdfOrganiser.mode=Mode
 pdfOrganiser.mode.1=Custom Page Order
@@ -875,7 +875,7 @@ split.desc.1=The numbers you select are the page number you wish to do a split o
 split.desc.2=As such selecting 1,3,7-9 would split a 10 page document into 6 separate PDFS with:
 split.desc.3=Document #1: Page 1
 split.desc.4=Document #2: Page 2 and 3
-split.desc.5=Document #3: Page 4, 5, 6, 7
+split.desc.5=Document #3: Page 4, 5, 6 and 7
 split.desc.6=Document #4: Page 8
 split.desc.7=Document #5: Page 9
 split.desc.8=Document #6: Page 10
@@ -901,12 +901,12 @@ imageToPDF.selectText.5=Convert to separate PDFs
 pdfToImage.title=PDF to Image
 pdfToImage.header=PDF to Image
 pdfToImage.selectText=Image Format
-pdfToImage.singleOrMultiple=Image result type
-pdfToImage.single=Single Big Image
-pdfToImage.multi=Multiple Images
-pdfToImage.colorType=Color type
-pdfToImage.color=Color
-pdfToImage.grey=Grayscale
+pdfToImage.singleOrMultiple=Page to Image result type
+pdfToImage.single=Single Big Image Combing all pages
+pdfToImage.multi=Multiple Images, one image per page
+pdfToImage.colorType=Colour type
+pdfToImage.color=Colour
+pdfToImage.grey=Greyscale
 pdfToImage.blackwhite=Black and White (May lose data!)
 pdfToImage.submit=Convert
 
@@ -976,7 +976,7 @@ removePassword.submit=Remove
 
 
 #changeMetadata
-changeMetadata.title=Title:
+changeMetadata.title=Change Metadata
 changeMetadata.header=Change Metadata
 changeMetadata.selectText.1=Please edit the variables you wish to change
 changeMetadata.selectText.2=Delete all metadata
@@ -1067,38 +1067,38 @@ overlay-pdfs.mode.label=Select Overlay Mode
 overlay-pdfs.mode.sequential=Sequential Overlay
 overlay-pdfs.mode.interleaved=Interleaved Overlay
 overlay-pdfs.mode.fixedRepeat=Fixed Repeat Overlay
-overlay-pdfs.counts.label=Overlay Counts (for Fixed Repeat Mode)
-overlay-pdfs.counts.placeholder=Enter comma-separated counts (e.g., 2,3,1)
-overlay-pdfs.position.label=Select Overlay Position
-overlay-pdfs.position.foreground=Foreground
-overlay-pdfs.position.background=Background
-overlay-pdfs.submit=Submit
+overlay-pdfs.counts.label=Antal overlejringer (for Fixed Repeat Mode)
+overlay-pdfs.counts.placeholder=Indtast kommaseparerede tællinger (f.eks. 2,3,1)
+overlay-pdfs.position.label=Vælg overlejringsposition
+overlay-pdfs.position.foreground=Forgrund
+overlay-pdfs.position.background=Baggrund
+overlay-pdfs.submit=Indsend
 
 
 #split-by-sections
-split-by-sections.title=Split PDF by Sections
-split-by-sections.header=Split PDF into Sections
-split-by-sections.horizontal.label=Horizontal Divisions
-split-by-sections.vertical.label=Vertical Divisions
-split-by-sections.horizontal.placeholder=Enter number of horizontal divisions
-split-by-sections.vertical.placeholder=Enter number of vertical divisions
-split-by-sections.submit=Split PDF
-split-by-sections.merge=Merge Into One PDF
+split-by-sections.title=Del PDF i Sektioner
+split-by-sections.header=Del PDF ind i Sektioner
+split-by-sections.horizontal.label=Horisontal Deling
+split-by-sections.vertical.label=Vertikal Deling
+split-by-sections.horizontal.placeholder=Indtast antal horisontale delinger
+split-by-sections.vertical.placeholder=Indtast antal af vertikale delinger
+split-by-sections.submit=Del PDF
+split-by-sections.merge=Slå sammen til én PDF
 
 
 #printFile
-printFile.title=Print File
-printFile.header=Print File to Printer
-printFile.selectText.1=Select File to Print
-printFile.selectText.2=Enter Printer Name
-printFile.submit=Print
+printFile.title=Udskriv Fil
+printFile.header=Udskriv Fil til Printer
+printFile.selectText.1=Vælg Fil som skal Udskrives
+printFile.selectText.2=Indtast printernavn
+printFile.submit=Udskriv
 
 
 #licenses
-licenses.nav=Licenses
-licenses.title=3rd Party Licenses
-licenses.header=3rd Party Licenses
-licenses.module=Module
+licenses.nav=Licenser
+licenses.title=Trejdepartslicenser
+licenses.header=Trejdepartslicenser
+licenses.module=Modul
 licenses.version=Version
 licenses.license=License
 
@@ -1113,14 +1113,14 @@ survey.dontShowAgain=Don't show again
 
 
 #error
-error.sorry=Sorry for the issue!
-error.needHelp=Need help / Found an issue?
-error.contactTip=If you're still having trouble, don't hesitate to reach out to us for help. You can submit a ticket on our GitHub page or contact us through Discord:
-error.404.head=404 - Page Not Found | Oops, we tripped in the code!
-error.404.1=We can't seem to find the page you're looking for.
-error.404.2=Something went wrong
-error.github=Submit a ticket on GitHub
-error.showStack=Show Stack Trace
-error.copyStack=Copy Stack Trace
-error.githubSubmit=GitHub - Submit a ticket
-error.discordSubmit=Discord - Submit Support post
+error.sorry=Beklager fejlen!
+error.needHelp=Brug for hjælp / Fundet et problem?
+error.contactTip=Hvis du stadig har problemer, skal du endelig tage kontakt til os, for at få hjælp. Du kan oprette en ticket på vores Github-side eller tage kontakt til os via Discord:
+error.404.head=404 - Siden ikke fundet | Ups, vi er viklet helt ind i kode!
+error.404.1=Vi kan ikke finde siden du leder efter.
+error.404.2=Noget gik galt
+error.github=Indsend en ticket på GitHub
+error.showStack=Vis Stack Trace
+error.copyStack=Kopier Stack Trace
+error.githubSubmit=GitHub - Indsend en ticket
+error.discordSubmit=Discord - Indsend Support post
