--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -706,8 +706,8 @@ removeAnnotations.submit=Rimuovi
 #compare
 compare.title=Compara
 compare.header=Compara PDF
-compare.highlightColor.1=Highlight Color 1:
-compare.highlightColor.2=Highlight Color 2:
+compare.highlightColor.1=Evidenzia colore 1:
+compare.highlightColor.2=Evidenzia colore 2:
 compare.document.1=Documento 1
 compare.document.2=Documento 2
 compare.submit=Compara
@@ -1124,4 +1124,3 @@ error.showStack=Mostra traccia dello stack
 error.copyStack=Copia traccia dello stack
 error.githubSubmit=GitHub: invia un ticket
 error.discordSubmit=Discord: invia post di supporto
-
