--- a/src/main/resources/messages_vi_VN.properties
+++ b/src/main/resources/messages_vi_VN.properties
@@ -22,7 +22,7 @@ close=Đóng
 filesSelected=tệp đã chọn
 noFavourites=Không có mục yêu thích nào được thêm
 downloadComplete=Tải xuống hoàn tất
-bored=Chán đợi?
+bored=Chán phải chờ đợi?
 alphabet=Bảng chữ cái
 downloadPdf=Tải xuống PDF
 text=Văn bản
@@ -147,6 +147,8 @@ changeCreds.newPassword=Mật khẩu mới
 changeCreds.confirmNewPassword=Xác nhận mật khẩu mới
 changeCreds.submit=Gửi thay đổi
 
+
+
 account.title=Cài đặt tài khoản
 account.accountSettings=Cài đặt tài khoản
 account.adminSettings=Cài đặt quản trị - Xem và thêm người dùng
@@ -166,6 +168,7 @@ account.property=Thuộc tính
 account.webBrowserSettings=Cài đặt trình duyệt web
 account.syncToBrowser=Đồng bộ hóa Tài khoản -> Trình duyệt
 account.syncToAccount=Đồng bộ hóa Tài khoản <- Trình duyệt
+
 
 adminUserSettings.title=Cài đặt kiểm soát người dùng
 adminUserSettings.header=Cài đặt kiểm soát người dùng quản trị
@@ -188,6 +191,7 @@ adminUserSettings.submit=Lưu người dùng
 adminUserSettings.changeUserRole=Thay đổi vai trò của người dùng
 adminUserSettings.authenticated=Đã xác thực
 
+
 database.title=Nhập/Xuất cơ sở dữ liệu
 database.header=Nhập/Xuất cơ sở dữ liệu
 database.fileName=Tên tệp
@@ -198,49 +202,6 @@ database.importBackupFile=Nhập tệp sao lưu
 database.downloadBackupFile=Tải xuống tệp sao lưu
 database.info_1=Khi nhập dữ liệu, điều quan trọng là phải đảm bảo cấu trúc chính xác. Nếu bạn không chắc chắn về những gì bạn đang làm, hãy tìm kiếm lời khuyên và hỗ trợ từ một chuyên gia. Lỗi trong cấu trúc có thể gây ra sự cố ứng dụng, thậm chí là không thể chạy ứng dụng hoàn toàn.
 database.info_2=Tên tệp không quan trọng khi tải lên. Nó sẽ được đổi tên sau đó để tuân theo định dạng backup_user_yyyyMMddHHmm.sql, đảm bảo quy ước đặt tên nhất quán.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 database.submit=Nhập bản sao lưu
 database.importIntoDatabaseSuccessed=Nhập vào cơ sở dữ liệu thành công
 database.fileNotFound=Không tìm thấy tệp
@@ -250,8 +211,9 @@ database.failedImportFile=Không thể nhập tệp
 #############
 # HOME-PAGE #
 #############
-home.desc=Nơi lưu trữ cục bộ của bạn cho tất cả các nhu cầu PDF.
+home.desc=Giải pháp toàn diện cho mọi nhu cầu về PDF ngay trên máy của bạn
 home.searchBar=Tìm kiếm tính năng...
+
 
 home.viewPdf.title=Xem PDF
 home.viewPdf.desc=Xem, chú thích, thêm văn bản hoặc hình ảnh
@@ -273,6 +235,7 @@ home.rotate.title=Xoay
 home.rotate.desc=Dễ dàng xoay PDF của bạn.
 rotate.tags=phía máy chủ
 
+
 home.imageToPdf.title=Hình ảnh sang PDF
 home.imageToPdf.desc=Chuyển đổi hình ảnh (PNG, JPEG, GIF) sang PDF.
 imageToPdf.tags=chuyển đổi,img,jpg,hình ảnh,ảnh
@@ -285,6 +248,7 @@ home.pdfOrganiser.title=Sắp xếp
 home.pdfOrganiser.desc=Xóa/Sắp xếp lại trang theo bất kỳ thứ tự nào
 pdfOrganiser.tags=duplex,chẵn,lẻ,sắp xếp,di chuyển
 
+
 home.addImage.title=Thêm hình ảnh
 home.addImage.desc=Thêm hình ảnh vào vị trí cố định trên PDF
 addImage.tags=img,jpg,hình ảnh,ảnh
@@ -296,6 +260,7 @@ watermark.tags=Văn bản,lặp lại,nhãn,riêng,bản quyền,thương hiệu
 home.permissions.title=Thay đổi quyền
 home.permissions.desc=Thay đổi quyền của tài liệu PDF của bạn
 permissions.tags=đọc,viết,chỉnh sửa,in
+
 
 home.removePages.title=Xóa
 home.removePages.desc=Xóa các trang không mong muốn khỏi tài liệu PDF của bạn.
@@ -313,6 +278,7 @@ home.compressPdfs.title=Nén
 home.compressPdfs.desc=Nén PDF để giảm kích thước tệp.
 compressPdfs.tags=ép,nhỏ,nhỏ gọn
 
+
 home.changeMetadata.title=Thay đổi Metadata
 home.changeMetadata.desc=Thay đổi/Xóa/Thêm metadata từ tài liệu PDF
 changeMetadata.tags=Tiêu đề,tác giả,ngày,tạo,thời gian,nhà xuất bản,nhà sản xuất,thống kê
@@ -324,6 +290,7 @@ fileToPDF.tags=chuyển đổi,định dạng,tài liệu,hình ảnh,slide,văn
 home.ocr.title=OCR / Dọn dẹp bản quét
 home.ocr.desc=Dọn dẹp bản quét và phát hiện văn bản từ hình ảnh trong PDF và thêm lại dưới dạng văn bản.
 ocr.tags=nhận dạng,văn bản,hình ảnh,quét,đọc,nhận dạng,phát hiện,có thể chỉnh sửa
+
 
 home.extractImages.title=Trích xuất hình ảnh
 home.extractImages.desc=Trích xuất tất cả hình ảnh từ PDF và lưu chúng vào tệp zip
@@ -348,6 +315,7 @@ PDFToText.tags=định dạng phong phú,định dạng văn bản phong phú,đ
 home.PDFToHTML.title=PDF sang HTML
 home.PDFToHTML.desc=Chuyển đổi PDF sang định dạng HTML
 PDFToHTML.tags=nội dung web,thân thiện với trình duyệt
+
 
 home.PDFToXML.title=PDF sang XML
 home.PDFToXML.desc=Chuyển đổi PDF sang định dạng XML
@@ -433,57 +401,29 @@ home.HTMLToPDF.title=HTML sang PDF
 home.HTMLToPDF.desc=Chuyển đổi bất kỳ tệp HTML hoặc zip nào thành PDF
 HTMLToPDF.tags=đánh dấu,nội dung web,chuyển đổi,chuyển
 
+
 home.MarkdownToPDF.title=Markdown sang PDF
 home.MarkdownToPDF.desc=Chuyển đổi bất kỳ tệp Markdown nào thành PDF
 MarkdownToPDF.tags=đánh dấu,nội dung web,chuyển đổi,chuyển
+
 
 home.getPdfInfo.title=Lấy TẤT CẢ thông tin về PDF
 home.getPdfInfo.desc=Lấy bất kỳ và tất cả thông tin có thể về PDF
 getPdfInfo.tags=thông tin,dữ liệu,số liệu thống kê,thống kê
 
+
 home.extractPage.title=Trích xuất (các) trang
 home.extractPage.desc=Trích xuất các trang được chọn từ PDF
 extractPage.tags=trích xuất
+
 
 home.PdfToSinglePage.title=PDF sang một trang lớn
 home.PdfToSinglePage.desc=Ghép tất cả các trang PDF thành một trang lớn duy nhất
 PdfToSinglePage.tags=trang đơn
 
+
 home.showJS.title=Hiển thị Javascript
 home.showJS.desc=Tìm kiếm và hiển thị bất kỳ JS nào được chèn vào PDF
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 showJS.tags=JS
 
 home.autoRedact.title=Tự động biên tập
@@ -494,9 +434,11 @@ home.tableExtraxt.title=PDF sang CSV
 home.tableExtraxt.desc=Trích xuất bảng từ PDF chuyển đổi thành CSV
 tableExtraxt.tags=CSV,Trích xuất bảng,trích xuất,chuyển đổi
 
+
 home.autoSizeSplitPDF.title=Tự động chia theo kích thước/số lượng
 home.autoSizeSplitPDF.desc=Chia một tệp PDF thành nhiều tài liệu dựa trên kích thước, số trang hoặc số lượng tài liệu
 autoSizeSplitPDF.tags=pdf,chia,tài liệu,tổ chức
+
 
 home.overlay-pdfs.title=Chồng lớp PDF
 home.overlay-pdfs.desc=Chồng lớp PDF lên trên PDF khác
@@ -511,9 +453,6 @@ home.AddStampRequest.desc=Thêm văn bản hoặc hình ảnh dấu tại vị t
 AddStampRequest.tags=Dấu,Thêm hình ảnh,căn giữa hình ảnh,Hình mờ,PDF,Nhúng,Tùy chỉnh
 
 
-
-
-
 home.PDFToBook.title=PDF sang sách
 home.PDFToBook.desc=Chuyển đổi PDF sang định dạng sách/truyện tranh bằng calibre
 PDFToBook.tags=Sách,Truyện tranh,Calibre,Chuyển đổi,manga,amazon,kindle,epub,mobi,azw3,docx,rtf,txt,html,lit,fb2,pdb,lrf
@@ -521,14 +460,6 @@ PDFToBook.tags=Sách,Truyện tranh,Calibre,Chuyển đổi,manga,amazon,kindle,
 home.BookToPDF.title=Sách sang PDF
 home.BookToPDF.desc=Chuyển đổi định dạng sách/truyện tranh sang PDF bằng calibre
 BookToPDF.tags=Sách,Truyện tranh,Calibre,Chuyển đổi,manga,amazon,kindle,epub,mobi,azw3,docx,rtf,txt,html,lit,fb2,pdb,lrf
-
-
-
-
-
-
-
-
 
 
 ###########################
@@ -691,8 +622,8 @@ adjustContrast.download=Tải xuống
 
 
 #crop
-crop.title=Cắt
-crop.header=Cắt PDF
+crop.title=Cắt cúp
+crop.header=Cắt cúp PDF
 crop.submit=Gửi
 
 
@@ -727,7 +658,7 @@ pageLayout.submit=Gửi
 scalePages.title=Điều chỉnh tỷ lệ trang
 scalePages.header=Điều chỉnh tỷ lệ trang
 scalePages.pageSize=Kích thước của một trang trong tài liệu.
-scalePages.scaleFactor=Mức độ phóng to (cắt) của một trang.
+scalePages.scaleFactor=Mức độ phóng to (cắt cúp) của một trang.
 scalePages.submit=Gửi
 
 
@@ -739,24 +670,15 @@ certSign.jksNote=Lưu ý: Nếu loại chứng chỉ của bạn không được
 certSign.selectKey=Chọn tệp khóa riêng của bạn (định dạng PKCS#8, có thể là .pem hoặc .der):
 certSign.selectCert=Chọn tệp chứng chỉ của bạn (định dạng X.509, có thể là .pem hoặc .der):
 certSign.selectP12=Chọn tệp Keystore PKCS#12 của bạn (.p12 hoặc .pfx) (Tùy chọn, nếu cung cấp, nó phải chứa khóa riêng và chứng chỉ của bạn):
-
-
-
-
-
-
-
-
-
-certSign.selectP12=Chọn tệp Keystore PKCS#12 của bạn (.p12 hoặc .pfx) (Tùy chọn, nếu cung cấp, nó phải chứa khóa riêng và chứng chỉ của bạn):
 certSign.selectJKS=Chọn tệp Java Keystore của bạn (.jks hoặc .keystore):
 certSign.certType=Loại chứng chỉ
-certSign.password=Nhập mật khẩu Keystore hoặc khóa riêng của bạn (Nếu có):
+certSign.password=Nhập mật khẩu Keystore hoặc Private Key của bạn (Nếu có):
 certSign.showSig=Hiển thị chữ ký
 certSign.reason=Lý do
 certSign.location=Vị trí
 certSign.name=Tên
 certSign.submit=Ký PDF
+
 
 #removeCertSign
 removeCertSign.title=Xóa chữ ký chứng chỉ
@@ -840,11 +762,11 @@ ScannerImageSplit.selectText.10=Đặt kích thước của viền được thê
 
 
 #OCR
-ocr.title=OCR / Làm sạch quét
-ocr.header=Làm sạch quét / OCR (Nhận dạng ký tự quang học)
+ocr.title=OCR / Làm sạch bản Scan
+ocr.header=Làm sạch các bản Scan / OCR (Nhận dạng ký tự quang học)
 ocr.selectText.1=Chọn ngôn ngữ cần được phát hiện trong PDF (Những ngôn ngữ được liệt kê là những ngôn ngữ hiện đang được phát hiện):
 ocr.selectText.2=Tạo tệp văn bản chứa văn bản OCR cùng với PDF đã được OCR
-ocr.selectText.3=Sửa các trang đã được quét ở góc nghiêng bằng cách xoay chúng trở lại vị trí
+ocr.selectText.3=Sửa các trang đã được scan ở góc nghiêng bằng cách xoay chúng trở lại vị trí
 ocr.selectText.4=Làm sạch trang để giảm khả năng OCR sẽ tìm thấy văn bản trong nhiễu nền. (Không thay đổi đầu ra)
 ocr.selectText.5=Làm sạch trang để giảm khả năng OCR sẽ tìm thấy văn bản trong nhiễu nền, duy trì làm sạch trong đầu ra.
 ocr.selectText.6=Bỏ qua các trang có văn bản tương tác, chỉ OCR các trang là hình ảnh
@@ -995,7 +917,7 @@ addPassword.header=Thêm mật khẩu (Mã hóa)
 addPassword.selectText.1=Chọn PDF để mã hóa
 addPassword.selectText.2=Mật khẩu người dùng
 addPassword.selectText.3=Độ dài khóa mã hóa
-addPassword.selectText.4=Giá trị cao hơn mạnh hơn, nhưng giá trị thấp hơn có tính tương thích tốt hơn.
+addPassword.selectText.4=Giá trị cao hơn thì mạnh hơn, nhưng giá trị thấp hơn có tính tương thích tốt hơn.
 addPassword.selectText.5=Quyền cần đặt (Khuyến nghị sử dụng cùng với mật khẩu chủ sở hữu)
 addPassword.selectText.6=Ngăn chặn lắp ráp tài liệu
 addPassword.selectText.7=Ngăn chặn trích xuất nội dung
@@ -1183,9 +1105,9 @@ licenses.license=Giấy phép
 #survey
 survey.nav=Khảo sát
 survey.title=Khảo sát Stirling-PDF
-survey.description=Stirling-PDF không có theo dõi nên chúng tôi muốn nghe từ người dùng để cải thiện Stirling-PDF!
+survey.description=Stirling-PDF không có cài đặt theo dõi nên chúng tôi muốn nghe từ người dùng để cải thiện Stirling-PDF!
 survey.please=Vui lòng cân nhắc tham gia khảo sát của chúng tôi!
-survey.disabled=(Cửa sổ bật lên khảo sát sẽ bị vô hiệu hóa trong các bản cập nhật tiếp theo nhưng vẫn có sẵn ở cuối trang)
+survey.disabled=(Cửa sổ popup khảo sát sẽ bị vô hiệu hóa trong các bản cập nhật tiếp theo nhưng vẫn tìm thấy ở cuối trang)
 survey.button=Tham gia khảo sát
 survey.dontShowAgain=Không hiển thị lại
 
@@ -1194,7 +1116,7 @@ survey.dontShowAgain=Không hiển thị lại
 error.sorry=Xin lỗi vì sự cố!
 error.needHelp=Cần trợ giúp / Phát hiện sự cố?
 error.contactTip=Nếu bạn vẫn gặp khó khăn, đừng ngần ngại liên hệ với chúng tôi để được trợ giúp. Bạn có thể gửi ticket trên trang GitHub của chúng tôi hoặc liên hệ qua Discord:
-error.404.head=404 - Không tìm thấy trang | Oops, chúng tôi đã vấp ngã trong mã!
+error.404.head=404 - Không tìm thấy trang | Ồ, có vẻ như chúng tôi đã vấp phải lỗi trong mã nguồn!
 error.404.1=Chúng tôi không thể tìm thấy trang bạn đang tìm kiếm.
 error.404.2=Đã xảy ra lỗi
 error.github=Gửi ticket trên GitHub
