--- a/src/main/resources/messages_da_DK.properties
+++ b/src/main/resources/messages_da_DK.properties
@@ -1,7 +1,7 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr = left to right, rtl = right to left)
+# the direction that the language is written (ltr=left to right, rtl = right to left)
 language.direction=ltr
 
 pdfPrompt=Vælg PDF-fil(er)
@@ -460,6 +460,14 @@ PDFToBook.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle,epub,mobi,azw3,doc
 home.BookToPDF.title=Book to PDF
 home.BookToPDF.desc=Converts Books/Comics formats to PDF using calibre
 BookToPDF.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle,epub,mobi,azw3,docx,rtf,txt,html,lit,fb2,pdb,lrf
+
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
 
 
 ###########################
@@ -945,6 +953,7 @@ watermark.selectText.6=heightSpacer (Space between each watermark vertically):
 watermark.selectText.7=Opacity (0% - 100%):
 watermark.selectText.8=Watermark Type:
 watermark.selectText.9=Watermark Image:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Add Watermark
 watermark.type.1=Text
 watermark.type.2=Image
@@ -1124,3 +1133,17 @@ error.showStack=Vis Stack Trace
 error.copyStack=Kopier Stack Trace
 error.githubSubmit=GitHub - Indsend en ticket
 error.discordSubmit=Discord - Indsend Support post
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
