--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Libro a PDF
 home.BookToPDF.desc=Convierte formatos de Libro/Cómic a PDF usando Calibre
 BookToPDF.tags=Libro,Cómic,Calibre,Convertir,manga,Amazon,Kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=Alto (Espacio entre cada marca de agua verticalmente):
 watermark.selectText.7=Opacidad (0% - 100%):
 watermark.selectText.8=Tipo de marca de agua:
 watermark.selectText.9=Imagen de marca de agua:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Añadir marca de agua
 watermark.type.1=Texto
 watermark.type.2=Imagen
@@ -1124,3 +1133,17 @@ error.showStack=Mostrar seguimiento de pila
 error.copyStack=Mostrar seguimiento de pila
 error.githubSubmit=GitHub - Enviar un ticket
 error.discordSubmit=Discord - Enviar mensaje de soporte
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
