--- a/src/main/resources/messages_ga_IE.properties
+++ b/src/main/resources/messages_ga_IE.properties
@@ -1,7 +1,7 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr = left to right, rtl = right to left)
+# the direction that the language is written (ltr=left to right, rtl = right to left)
 language.direction=ltr
 
 pdfPrompt=Roghnaigh PDF(s)
@@ -461,6 +461,14 @@ home.BookToPDF.title=Leabhar a thiontú go PDF
 home.BookToPDF.desc=Tiontaíonn sé formáidí Leabhair/Comics go PDF ag baint úsáide as calibre
 BookToPDF.tags=Leabhar, Comic, Calibre, Tiontaigh, manga, amazon, kindle, epub, mobi, azw3, docx, rtf, txt, html, lit, fb2, pdb, lrf
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -691,7 +699,7 @@ removeCertSign.submit=Bain Síniú
 removeBlanks.title=Bain Bearnaí
 removeBlanks.header=Bain Leathanaigh Bhána
 removeBlanks.threshold=Tairseach Bánachta picteilíní:
-removeBlanks.thresholdDesc=An tairseach chun a chinneadh cé chomh bán is gá picteilín bán a bheith le rangú mar 'Bán'. 0 
+removeBlanks.thresholdDesc=An tairseach chun a chinneadh cé chomh bán is gá picteilín bán a bheith le rangú mar 'Bán'. 0
 removeBlanks.whitePercent=Céatadán Bán (%):
 removeBlanks.whitePercentDesc=Céatadán an leathanaigh a chaithfidh picteilíní 'bán' a bheith ann lena bhaint
 removeBlanks.submit=Bain Bearnaí
@@ -945,6 +953,7 @@ watermark.selectText.6=spásaire airde (Spás idir gach comhartha uisce go hinge
 watermark.selectText.7=Teimhneacht (0% - 100%):
 watermark.selectText.8=Cineál Comhartha Uisce:
 watermark.selectText.9=Íomhá Comhartha Uisce:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Cuir Uisce leis
 watermark.type.1=Téacs
 watermark.type.2=Íomha
@@ -1124,3 +1133,17 @@ error.showStack=Taispeáin Stack Trace
 error.copyStack=Cóipeáil Stack Trace
 error.githubSubmit=GitHub - Cuir ticéad isteach
 error.discordSubmit=Discord - Cuir post Tacaíochta
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
