--- a/src/main/resources/messages_sr_LATN_RS.properties
+++ b/src/main/resources/messages_sr_LATN_RS.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Book to PDF
 home.BookToPDF.desc=Converts Books/Comics formats to PDF using calibre
 BookToPDF.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=Visina razmaka (Razmak između svakog vodenog žiga verti
 watermark.selectText.7=Opačitost (0% - 100%):
 watermark.selectText.8=Tip vodenog žiga:
 watermark.selectText.9=Slika vodenog žiga:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Dodaj vodeni žig
 watermark.type.1=Text
 watermark.type.2=Image
@@ -1124,3 +1133,17 @@ error.showStack=Show Stack Trace
 error.copyStack=Copy Stack Trace
 error.githubSubmit=GitHub - Submit a ticket
 error.discordSubmit=Discord - Submit Support post
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
