--- a/src/main/resources/messages_vi_VN.properties
+++ b/src/main/resources/messages_vi_VN.properties
@@ -1,7 +1,7 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr = left to right, rtl = right to left)
+# the direction that the language is written (ltr=left to right, rtl = right to left)
 language.direction=ltr
 
 pdfPrompt=Chọn (các) tệp PDF
@@ -460,6 +460,14 @@ PDFToBook.tags=Sách,Truyện tranh,Calibre,Chuyển đổi,manga,amazon,kindle,
 home.BookToPDF.title=Sách sang PDF
 home.BookToPDF.desc=Chuyển đổi định dạng sách/truyện tranh sang PDF bằng calibre
 BookToPDF.tags=Sách,Truyện tranh,Calibre,Chuyển đổi,manga,amazon,kindle,epub,mobi,azw3,docx,rtf,txt,html,lit,fb2,pdb,lrf
+
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
 
 
 ###########################
@@ -945,6 +953,7 @@ watermark.selectText.6=Khoảng cách dọc (Khoảng cách giữa mỗi hình m
 watermark.selectText.7=Độ mờ (0% - 100%):
 watermark.selectText.8=Loại hình mờ:
 watermark.selectText.9=Hình ảnh hình mờ:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Thêm hình mờ
 watermark.type.1=Văn bản
 watermark.type.2=Hình ảnh
@@ -1124,3 +1133,17 @@ error.showStack=Hiển thị Stack Trace
 error.copyStack=Sao chép Stack Trace
 error.githubSubmit=GitHub - Gửi ticket
 error.discordSubmit=Discord - Gửi bài đăng hỗ trợ
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
