--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=電子書轉 PDF
 home.BookToPDF.desc=使用 calibre 將書籍/漫畫格式轉換為 PDF
 BookToPDF.tags=電子書,漫畫,Calibre,轉換,日本漫畫,亞馬遜,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=heightSpacer（每個浮水印之間的垂直間距）：
 watermark.selectText.7=不透明度（0% - 100%）：
 watermark.selectText.8=浮水印類型：
 watermark.selectText.9=浮水印影像：
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=新增浮水印
 watermark.type.1=文字
 watermark.type.2=圖片
@@ -1124,3 +1133,17 @@ error.showStack=顯示堆疊追蹤
 error.copyStack=複製堆疊追蹤
 error.githubSubmit=GitHub - 提交工單
 error.discordSubmit=Discord - 提交支援帖子
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
