--- a/src/main/resources/messages_cs_CZ.properties
+++ b/src/main/resources/messages_cs_CZ.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Kniha na PDF
 home.BookToPDF.desc=Převádí formáty knih/komiksů do PDF pomocí calibre
 BookToPDF.tags=Kniha,Komiks,Calibre,Konvertovat,manga,amazon,kindle,epub,mobi,azw3,docx,rtf,txt,html,lit,fb2,pdb,lrf
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=Výška mezery (Mezera mezi každým vodoznakem svisle):
 watermark.selectText.7=Průhlednost (0% - 100%):
 watermark.selectText.8=Typ vodoznaku:
 watermark.selectText.9=Obrázek vodoznaku:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Přidat vodoznak
 watermark.type.1=Text
 watermark.type.2=Obrázek
@@ -1124,3 +1133,17 @@ error.showStack=Zobrazit stopu zásobníku
 error.copyStack=Kopírovat stopu zásobníku
 error.githubSubmit=GitHub - Odeslat požadavek
 error.discordSubmit=Discord - Odeslat příspěvek podpory
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
