--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Buch als PDF
 home.BookToPDF.desc=Konvertiert Buch-/Comic-Formate mithilfe von Calibre in PDF
 BookToPDF.tags=buch,comic,calibre,convert,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=höheSpacer (vertikaler Abstand zwischen den einzelnen Wa
 watermark.selectText.7=Deckkraft (0% - 100 %):
 watermark.selectText.8=Wasserzeichen Typ:
 watermark.selectText.9=Wasserzeichen-Bild:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Wasserzeichen hinzufügen
 watermark.type.1=Text
 watermark.type.2=Bild
@@ -1124,3 +1133,17 @@ error.showStack=Stack-Trace anzeigen
 error.copyStack=Stack-Trace kopieren
 error.githubSubmit=GitHub - Ein Ticket einreichen
 error.discordSubmit=Discord - Unterstützungsbeitrag einreichen
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
