--- a/src/main/resources/messages_el_GR.properties
+++ b/src/main/resources/messages_el_GR.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Book σε PDF
 home.BookToPDF.desc=Μετατρέπει τις μορφές Books/Comics σε PDF χρησιμοποιώντας calibre
 BookToPDF.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=heightSpacer (Κενό μεταξύ κάθε υδατογ
 watermark.selectText.7=Αδιαφάνεια (Opacity) (0% - 100%):
 watermark.selectText.8=Τύπος Υδατογραφήματος:
 watermark.selectText.9=Εικόνα Υδατογραφήματος:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Προσθήκη Υδατογραφήματος
 watermark.type.1=Κείμενο
 watermark.type.2=Εικόνα
@@ -1124,3 +1133,17 @@ error.showStack=Εμφάνιση Stack Trace
 error.copyStack=Αντιγραφή Stack Trace
 error.githubSubmit=GitHub - Υποβάλετε ένα ticket
 error.discordSubmit=Discord - Υποβάλετε ένα Support post
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
