--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=eBook vers PDF
 home.BookToPDF.desc=Convertit les formats de livres/bandes dessinées en PDF à l'aide de calibre
 BookToPDF.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=heightSpacer (espace entre chaque filigrane verticalement
 watermark.selectText.7=Opacité (de 0% à 100%)
 watermark.selectText.8=Type de filigrane
 watermark.selectText.9=Image du filigrane
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Ajouter un filigrane
 watermark.type.1=Text
 watermark.type.2=Image
@@ -1124,3 +1133,17 @@ error.showStack=Afficher la  Stack Trace
 error.copyStack=Copier la Stack Trace
 error.githubSubmit=GitHub - Créer un ticket
 error.discordSubmit=Discord - Poster un message de demande d’assistance
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
