--- a/src/main/resources/messages_hr_HR.properties
+++ b/src/main/resources/messages_hr_HR.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Book u PDF
 home.BookToPDF.desc=Pretvara format knjige/stripa u PDF format pomoću calibre
 BookToPDF.tags=Knjiga,Strip,Calibre,Pretvori,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=Visina razmaka (Razmak između svakog vodenog žiga okomi
 watermark.selectText.7=Neprozirnost (0% - 100%):
 watermark.selectText.8=Vrsta vodenog žiga:
 watermark.selectText.9=Slika vodenog žiga:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Dodaj vodeni žig
 watermark.type.1=Tekst
 watermark.type.2=Slika
@@ -1124,3 +1133,17 @@ error.showStack=Prikaži Stack Trace
 error.copyStack=Kopiraj Stack Trace
 error.githubSubmit=GitHub - Pošaljite ticket
 error.discordSubmit=Discord - Pošalji objavu podrške
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
