--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Libro in PDF
 home.BookToPDF.desc=Converte i formati di libri/fumetti in PDF utilizzando Calibre
 BookToPDF.tags=Libro,fumetto,calibre,conversione,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=spazio verticale (tra ogni filigrana):
 watermark.selectText.7=Opacità (0% - 100%):
 watermark.selectText.8=Tipo di filigrana:
 watermark.selectText.9=Immagine filigrana:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Aggiungi Filigrana
 watermark.type.1=Testo
 watermark.type.2=Immagine
@@ -1124,3 +1133,17 @@ error.showStack=Mostra traccia dello stack
 error.copyStack=Copia traccia dello stack
 error.githubSubmit=GitHub: invia un ticket
 error.discordSubmit=Discord: invia post di supporto
+
+
+#remove-image
+removeImage.title=Rimuovere immagine
+removeImage.header=Rimuovi immagine
+removeImage.removeImage=Rimuovi immagine
+removeImage.submit=Rimuovi immagine
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
