--- a/src/main/resources/messages_ko_KR.properties
+++ b/src/main/resources/messages_ko_KR.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=책을 PDF로
 home.BookToPDF.desc=구경을 사용하여 책/만화 형식을 PDF로 변환
 BookToPDF.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=세로 간격 (각 워터마크 사이의 세로 공간):
 watermark.selectText.7=투명도 (0% - 100%):
 watermark.selectText.8=워터마크 유형:
 watermark.selectText.9=워터마크 이미지:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=워터마크 추가
 watermark.type.1=텍스트
 watermark.type.2=이미지
@@ -1124,3 +1133,17 @@ error.showStack=스택 추적 보기
 error.copyStack=스택 추적 복사
 error.githubSubmit=GitHub - 티켓 제출
 error.discordSubmit=Discord - 문의 게시
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
