--- a/src/main/resources/messages_nl_NL.properties
+++ b/src/main/resources/messages_nl_NL.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Boek naar PDF
 home.BookToPDF.desc=Converteert boek-/stripformaat naar PDF met gebruik van Calibre
 BookToPDF.tags=Boek,Strip,Comic,Calibre,Converteren,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=hoogteSpacer (Ruimte tussen elk watermerk verticaal):
 watermark.selectText.7=Transparantie (0% - 100%):
 watermark.selectText.8=Type watermerk:
 watermark.selectText.9=Watermerk afbeelding:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Watermerk toevoegen
 watermark.type.1=Text
 watermark.type.2=Image
@@ -1124,3 +1133,17 @@ error.showStack=Geeft tracering weer
 error.copyStack=Kopieer tracering
 error.githubSubmit=GitHub - Dien een ticket in
 error.discordSubmit=Discord - Maak een support post
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
