--- a/src/main/resources/messages_sk_SK.properties
+++ b/src/main/resources/messages_sk_SK.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Kniha do PDF
 home.BookToPDF.desc=Konvertuje formáty kníh/komiksov do PDF pomocou Calibre
 BookToPDF.tags=kniha, komiks, Calibre, konvertovať, manga, amazon, kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=Výška medzery (Medzera medzi jednotlivými vodotlačami
 watermark.selectText.7=Priehľadnosť (0% - 100%):
 watermark.selectText.8=Typ vodotlače:
 watermark.selectText.9=Obrázok vodotlače:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Pridať vodotlač
 watermark.type.1=Text
 watermark.type.2=Obrázok
@@ -1124,3 +1133,17 @@ error.showStack=Zobraziť sledovanie zásobníka
 error.copyStack=Kopírovať sledovanie zásobníka
 error.githubSubmit=GitHub - Podajte tiket
 error.discordSubmit=Discord - Podajte príspevok na podporu
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
