--- a/src/main/resources/messages_tr_TR.properties
+++ b/src/main/resources/messages_tr_TR.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Kitaptan PDF'ye
 home.BookToPDF.desc=calibre kullanarak Kitap/Karikatür formatlarını PDF'ye dönüştürür
 BookToPDF.tags=Kitap,Çizgi Roman,Calibre,Dönüştür,manga,amazon,kindle,epub,mobi,azw3,docx,rtf,txt,html,lit,fb2,pdb,lrf
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=yükseklikBoşluk (Dikeyde her filigran arasında boşluk
 watermark.selectText.7=Opaklık (0% - 100%):
 watermark.selectText.8=Filigran Türü:
 watermark.selectText.9=Filigran Resmi:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Filigran Ekle
 watermark.type.1=Metin
 watermark.type.2=Resim
@@ -1124,3 +1133,17 @@ error.showStack=Yığın İzlemesini Göster
 error.copyStack=Yığın İzini Kopyala
 error.githubSubmit=GitHub - Hata gönderin
 error.discordSubmit=Discord - Destek gönderisi gönderin
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
