--- a/src/main/resources/messages_uk_UA.properties
+++ b/src/main/resources/messages_uk_UA.properties
@@ -461,6 +461,14 @@ home.BookToPDF.title=Книга у PDF
 home.BookToPDF.desc=Конвертує формати книги/комікса у PDF за допомогою calibre
 BookToPDF.tags=Book,Comic,Calibre,Convert,manga,amazon,kindle
 
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
+
+home.PDFToWebP.title=PDF to WebP
+home.PDFToWebP.desc=Converting a PDF file to WebP.
+home.PDFToWebP.tags=webp,conversion
+
 
 ###########################
 #                         #
@@ -945,6 +953,7 @@ watermark.selectText.6=heightSpacer (проміжок між кожним вод
 watermark.selectText.7=Непрозорість (0% - 100%):
 watermark.selectText.8=Тип водяного знаку:
 watermark.selectText.9=Зображення водяного знаку:
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Додати водяний знак
 watermark.type.1=Текст
 watermark.type.2=Зображення
@@ -1124,3 +1133,17 @@ error.showStack=Показати стек викликів
 error.copyStack=Скопіювати стек викликів
 error.githubSubmit=GitHub - Надіслати запит
 error.discordSubmit=Discord - Надіслати повідомлення підтримки
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+#WebP
+pdfToWebP.title=PDF to WebP Converter
+pdfToWebP.header=Convert PDF Pages to High-Quality WebP Images
+pdfToWebP.quality=Select Image Quality (1-100):
+pdfToWebP.submit=Start Conversion
