Update messages_uk_UA.properties (#121)
* Update messages_uk_UA.properties

* Update check_language_files.py

* Update messages_zh_TW.properties

* Update messages_en_GB.properties

* Update messages_en_GB.properties

* Update translation files

* Update check.yml

---------

Co-authored-by: GitHub Action action@github.com <GitHub Action action@github.com>

--- a/src/main/resources/messages_uk_UA.properties
+++ b/src/main/resources/messages_uk_UA.properties
@@ -1,7 +1,7 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr=left to right, rtl = right to left)
+# the direction that the language is written (ltr = left to right, rtl = right to left)
 language.direction=ltr
 
 pdfPrompt=Оберіть PDF(и)
@@ -775,6 +775,7 @@ ScannerImageSplit.selectText.7=Мінімальна площа контуру:
 ScannerImageSplit.selectText.8=Встановлює мінімальний поріг площі контуру для фотографії
 ScannerImageSplit.selectText.9=Розмір рамки:
 ScannerImageSplit.selectText.10=Встановлює розмір додаваної та видаляної рамки, щоб запобігти появі білих рамок на виході (за замовчуванням: 1).
+ScannerImageSplit.info=Python is not installed. It is required to run.
 
 
 #OCR
@@ -925,6 +926,7 @@ pdfToImage.color=Колір
 pdfToImage.grey=Відтінки сірого
 pdfToImage.blackwhite=Чорно-білий (може втратити дані!)
 pdfToImage.submit=Конвертувати
+pdfToImage.info=Python is not installed. Required for WebP conversion.
 
 
 #addPassword
@@ -1148,3 +1150,6 @@ removeImage.title=Remove image
 removeImage.header=Remove image
 removeImage.removeImage=Remove image
 removeImage.submit=Remove image
+
+test=True
+tset=False
