--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -1,7 +1,7 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr=left to right, rtl = right to left)
+# the direction that the language is written (ltr = left to right, rtl = right to left)
 language.direction=ltr
 
 pdfPrompt=選擇 PDF 檔案
@@ -291,7 +291,7 @@ compressPdfs.tags=壓縮,小,微小
 
 home.changeMetadata.title=變更中繼資料
 home.changeMetadata.desc=從 PDF 檔案中變更/移除/新增中繼資料
-changeMetadata.tags==標題,作者,日期,建立,時間,出版商,製作人,統計
+changeMetadata.tags=標題,作者,日期,建立,時間,出版商,製作人,統計
 
 home.fileToPDF.title=檔案轉 PDF
 home.fileToPDF.desc=將幾乎所有格式轉換為 PDF（DOCX、PNG、XLS、PPT、TXT 等等）
@@ -775,6 +775,7 @@ ScannerImageSplit.selectText.7=最小輪廓區域：
 ScannerImageSplit.selectText.8=設定照片的最小輪廓區域閾值
 ScannerImageSplit.selectText.9=邊框大小：
 ScannerImageSplit.selectText.10=設定新增和移除的邊框大小，以防止輸出中的白色邊框（預設：1）。
+ScannerImageSplit.info=Python is not installed. It is required to run.
 
 
 #OCR
@@ -925,6 +926,7 @@ pdfToImage.color=顏色
 pdfToImage.grey=灰度
 pdfToImage.blackwhite=黑白（可能會遺失資料！）
 pdfToImage.submit=轉換
+pdfToImage.info=Python is not installed. Required for WebP conversion.
 
 
 #addPassword
@@ -1148,3 +1150,6 @@ removeImage.title=Remove image
 removeImage.header=Remove image
 removeImage.removeImage=Remove image
 removeImage.submit=Remove image
+
+test=True
+tset=False
