--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -4,7 +4,7 @@
 # the direction that the language is written (ltr = left to right, rtl = right to left)
 language.direction=ltr
 
-pdfPrompt=Select PDF(s)
+pdfPrompt2=Select PDF(s)
 multiPdfPrompt=Select PDFs (2+)
 multiPdfDropPrompt=Select (or drag & drop) all PDFs you require
 imgPrompt=Select Image(s)
