--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -5,7 +5,7 @@
 language.direction=ltr
 
 pdfPrompt2=Select PDF(s)
-multiPdfPrompt=Select PDFs (2+)
+multiPdfPrompt2=Select PDFs (2+)
 multiPdfDropPrompt=Select (or drag & drop) all PDFs you require
 imgPrompt=Select Image(s)
 genericSubmit=Submit
