--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -7,7 +7,7 @@ language.direction=ltr
 pdfPrompt2=Select PDF(s)
 multiPdfPrompt2=Select PDFs (2+)
 multiPdfDropPrompt2=Select (or drag & drop) all PDFs you require
-imgPrompt=Select Image(s)
+imgPrompt2=Select Image(s)
 genericSubmit=Submit
 processTimeWarning=Warning: This process can take up to a minute depending on file-size
 pageOrderPrompt=Custom Page Order (Enter a comma-separated list of page numbers or Functions like 2n+1) :
