--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -8,7 +8,7 @@ pdfPrompt2=Select PDF(s)
 multiPdfPrompt2=Select PDFs (2+)
 multiPdfDropPrompt2=Select (or drag & drop) all PDFs you require
 imgPrompt2=Select Image(s)
-genericSubmit=Submit
+genericSubmit2=Submit
 processTimeWarning=Warning: This process can take up to a minute depending on file-size
 pageOrderPrompt=Custom Page Order (Enter a comma-separated list of page numbers or Functions like 2n+1) :
 pageSelectionPrompt=Custom Page Selection (Enter a comma-separated list of page numbers 1,5,6 or Functions like 2n+1) :
