--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -4,14 +4,14 @@
 # the direction that the language is written (ltr = left to right, rtl = right to left)
 language.direction=ltr
 
-pdfPrompt2=Select PDF(s)
-multiPdfPrompt2=Select PDFs (2+)
-multiPdfDropPrompt2=Select (or drag & drop) all PDFs you require
-imgPrompt2=Select Image(s)
-genericSubmit2=Submit
-processTimeWarning2=Warning: This process can take up to a minute depending on file-size
-pageOrderPrompt2=Custom Page Order (Enter a comma-separated list of page numbers or Functions like 2n+1) :
-pageSelectionPrompt2=Custom Page Selection (Enter a comma-separated list of page numbers 1,5,6 or Functions like 2n+1) :
+pdfPrompt=Select PDF(s)
+multiPdfPrompt=Select PDFs (2+)
+multiPdfDropPrompt=Select (or drag & drop) all PDFs you require
+imgPrompt=Select Image(s)
+genericSubmit=Submit
+processTimeWarning=Warning: This process can take up to a minute depending on file-size
+pageOrderPrompt=Custom Page Order (Enter a comma-separated list of page numbers or Functions like 2n+1) :
+pageSelectionPrompt=Custom Page Selection (Enter a comma-separated list of page numbers 1,5,6 or Functions like 2n+1) :
 goToPage=Go
 true=True
 false=False
