--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -802,6 +802,7 @@ ocr.submit=Process PDF with OCR
 extractImages.title=Extract Images
 extractImages.header=Extract Images
 extractImages.selectText=Select image format to convert extracted images to
+extractImages.allowDuplicates=Save duplicate images
 extractImages.submit=Extract
 
 
@@ -1150,6 +1151,3 @@ removeImage.title=Remove image
 removeImage.header=Remove image
 removeImage.removeImage=Remove image
 removeImage.submit=Remove image
-
-test=True
-tset=False
