--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -1,10 +1,10 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr = left to right, rtl = right to left)
+# the direction that the language is written (ltr=left to right, rtl = right to left)
 language.direction=ltr
 
-pdfPrompt=Select PDF(s)
+pdfPrompwt=PDF auswählen
 multiPdfPrompt=PDFs auswählen(2+)
 multiPdfDropPrompt=Wählen Sie alle gewünschten PDFs aus (oder ziehen Sie sie per Drag & Drop hierhin)
 imgPrompt=Wählen Sie ein Bild
@@ -802,7 +802,6 @@ ocr.submit=PDF mit OCR verarbeiten
 extractImages.title=Bilder extrahieren
 extractImages.header=Bilder extrahieren
 extractImages.selectText=Wählen Sie das Bildformat aus, in das extrahierte Bilder konvertiert werden sollen
-extractImages.allowDuplicates=Save duplicate images
 extractImages.submit=Extrahieren
 
 
@@ -1151,12 +1150,3 @@ removeImage.title=Remove image
 removeImage.header=Remove image
 removeImage.removeImage=Remove image
 removeImage.submit=Remove image
-
-test=1
-test2=2
-test3=3
-test4=4
-test5=5
-test6=6
-test7=7
-test8=8
