--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -1,7 +1,7 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr = left to right, rtl = right to left)
+# the direction that the language is written (ltr=left to right, rtl = right to left)
 language.direction=ltr
 
 pdfPrompt=Seleccionar PDF(s)
@@ -55,12 +55,12 @@ userNotFoundMessage=Usuario no encontrado.
 incorrectPasswordMessage=La contraseña actual no es correcta.
 usernameExistsMessage=El nuevo nombre de usuario está en uso.
 invalidUsernameMessage=Nombre de usuario no válido, el nombre de usuario solo puede contener letras, números y los siguientes caracteres especiales @._+- o debe ser una dirección de correo electrónico válida.
-invalidPasswordMessage=La contraseña no puede dejarse en blanco y no puede ni empezar ni terminar con espacios.
-confirmPasswordErrorMessage=Deben coincidir Nueva Contraseña y Confirmar Nueva Contraseña.
+invalidPasswordMessage=The password must not be empty and must not have spaces at the beginning or end.
+confirmPasswordErrorMessage=New Password and Confirm New Password must match.
 deleteCurrentUserMessage=No puede eliminar el usuario que tiene la sesión actualmente en uso.
 deleteUsernameExistsMessage=El usuario no existe y no puede eliminarse.
 downgradeCurrentUserMessage=No se puede degradar el rol del usuario actual
-disabledCurrentUserMessage=El usuario actual no se puede deshabilitar
+disabledCurrentUserMessage=The current user cannot be disabled
 downgradeCurrentUserLongMessage=No se puede degradar el rol del usuario actual. Por lo tanto, el usuario actual no se mostrará.
 userAlreadyExistsOAuthMessage=La usuario ya existe como usuario de OAuth2.
 userAlreadyExistsWebMessage=El usuario ya existe como usuario web.
@@ -88,7 +88,7 @@ pipeline.defaultOption=Personalizar
 pipeline.submitButton=Enviar
 pipeline.help=Ayuda de Canalización
 pipeline.scanHelp=Ayuda de escaneado de carpetas
-pipeline.deletePrompt=¿Seguro que quiere eliminar la canalización?
+pipeline.deletePrompt=¿Estás segura de que quieres eliminar la canalización?
 
 ######################
 #  Pipeline Options  #
@@ -115,7 +115,7 @@ navbar.language=Idiomas
 navbar.settings=Configuración
 navbar.allTools=Herramientas
 navbar.multiTool=Multi herramientas
-navbar.sections.organize=Organizar
+navbar.sections.organize=Organize
 navbar.sections.convertTo=Convertir a PDF
 navbar.sections.convertFrom=Convertir desde PDF
 navbar.sections.security=Señalización y seguridad
@@ -179,7 +179,7 @@ adminUserSettings.user=Usuario
 adminUserSettings.addUser=Añadir Nuevo Usuario
 adminUserSettings.deleteUser=Eliminar Usuario
 adminUserSettings.confirmDeleteUser=¿Se debe eliminar al usuario?
-adminUserSettings.confirmChangeUserStatus=Se debe habilitar/deshabilitar el usuario?
+adminUserSettings.confirmChangeUserStatus=Should the user be disabled/enabled?
 adminUserSettings.usernameInfo=El nombre de usuario solo puede contener letras, números y los siguientes caracteres especiales @._+- o debe ser una dirección de correo electrónico válida.
 adminUserSettings.roles=Roles
 adminUserSettings.role=Rol
@@ -193,13 +193,13 @@ adminUserSettings.forceChange=Forzar usuario a cambiar usuario/contraseña en el
 adminUserSettings.submit=Guardar Usuario
 adminUserSettings.changeUserRole=Cambiar rol de usuario
 adminUserSettings.authenticated=Autenticado
-adminUserSettings.editOwnProfil=Editar el perfil actual
-adminUserSettings.enabledUser=usuario habilitado
-adminUserSettings.disabledUser=usuario deshabilitado
-adminUserSettings.activeUsers=Usuarios Activos:
-adminUserSettings.disabledUsers=Usuarios deshabilitados:
-adminUserSettings.totalUsers=Usuarios totales:
-adminUserSettings.lastRequest=Última petición
+adminUserSettings.editOwnProfil=Edit own profile
+adminUserSettings.enabledUser=enabled user
+adminUserSettings.disabledUser=disabled user
+adminUserSettings.activeUsers=Active Users:
+adminUserSettings.disabledUsers=Disabled Users:
+adminUserSettings.totalUsers=Total Users:
+adminUserSettings.lastRequest=Last Request
 
 
 database.title=Base de Datos Importar/Exportar
@@ -212,7 +212,7 @@ database.importBackupFile=Importar archivo de copia de seguridad
 database.downloadBackupFile=Descargar archivo de copia de seguridad
 database.info_1=Al importar datos, es fundamental garantizar la estructura correcta. Si no está seguro de lo que está haciendo, busque consejo y apoyo de un profesional. Un error en la estructura puede causar un mal funcionamiento de la aplicación, incluyendo la imposibilidad total de ejecutar la aplicación.
 database.info_2=El nombre del archivo no importa al cargarlo. Posteriormente se le cambiará el nombre para que siga el formato backup_user_yyyyMMddHHmm.sql, lo que garantiza una convención de nomenclatura coherente.
-database.submit=Importar Copia de Seguridad
+database.submit=Importar Backup
 database.importIntoDatabaseSuccessed=Importación a la base de datos ha sido exitosa
 database.fileNotFound=Archivo no encontrado
 database.fileNullOrEmpty=El archivo no debe ser nulo o vacío.
@@ -471,9 +471,9 @@ home.BookToPDF.title=Libro a PDF
 home.BookToPDF.desc=Convierte formatos de Libro/Cómic a PDF usando Calibre
 BookToPDF.tags=Libro,Cómic,Calibre,Convertir,manga,Amazon,Kindle
 
-home.removeImagePdf.title=Eliminar imagen
-home.removeImagePdf.desc=Eliminar imagen del PDF> para reducir el tamaño de archivo
-removeImagePdf.tags=Eliminar imagen,Operaciones de página,Back end,lado del servidor
+home.removeImagePdf.title=Remove image
+home.removeImagePdf.desc=Remove image from PDF to reduce file size
+removeImagePdf.tags=Remove Image,Page operations,Back end,server side
 
 
 ###########################
@@ -494,11 +494,11 @@ login.oauth2AutoCreateDisabled=Usuario de creación automática de OAUTH2 DESACT
 login.oauth2AdminBlockedUser=Registration or logging in of non-registered users is currently blocked. Please contact the administrator.
 login.oauth2RequestNotFound=Solicitud de autorización no encontrada
 login.oauth2InvalidUserInfoResponse=Respuesta de información de usuario no válida
-login.oauth2invalidRequest=Solicitud no válida
-login.oauth2AccessDenied=Acceso denegado
+login.oauth2invalidRequest=Invalid Request
+login.oauth2AccessDenied=Access Denied
 login.oauth2InvalidTokenResponse=Respuesta de token no válida
 login.oauth2InvalidIdToken=Token de identificación no válido
-login.userIsDisabled=El usuario está desactivado, actualmente el acceso está bloqueado para ese nombre de usuario. Por favor, póngase en contacto con el administrador.
+login.userIsDisabled=User is deactivated, login is currently blocked with this username. Please contact the administrator.
 
 
 #auto-redact
@@ -775,7 +775,7 @@ ScannerImageSplit.selectText.7=Área mínima de contorno:
 ScannerImageSplit.selectText.8=Establecer el umbral mínimo del área de contorno para una foto
 ScannerImageSplit.selectText.9=Tamaño del borde:
 ScannerImageSplit.selectText.10=Establece el tamaño del borde agregado y eliminado para evitar bordes blancos en la salida (predeterminado: 1).
-ScannerImageSplit.info=Python no está instalado. Se requiere para funcionar.
+ScannerImageSplit.info=Python is not installed. It is required to run.
 
 
 #OCR
@@ -802,7 +802,6 @@ ocr.submit=Procesar PDF con OCR
 extractImages.title=Extraer imágenes
 extractImages.header=Extraer imágenes
 extractImages.selectText=Seleccionar el formato de imagen para convertir las imágenes extraídas
-extractImages.allowDuplicates=Guardar imágenes duplicadas
 extractImages.submit=Extraer
 
 
@@ -840,7 +839,7 @@ merge.title=Unir
 merge.header=Unir múltiples PDFs (2+)
 merge.sortByName=Ordenar por nombre
 merge.sortByDate=Ordenar por fecha
-merge.removeCertSign=Eliminar la firma digital en el archivo unido?
+merge.removeCertSign=Remove digital signature in the merged file?
 merge.submit=Unir
 
 
@@ -858,14 +857,14 @@ pdfOrganiser.mode.6=División par-impar
 pdfOrganiser.mode.7=Quitar primera
 pdfOrganiser.mode.8=Quitar última
 pdfOrganiser.mode.9=Quitar primera y última
-pdfOrganiser.mode.10=Unir impar-par
+pdfOrganiser.mode.10=Odd-Even Merge
 pdfOrganiser.placeholder=(por ej., 1,3,2 o 4-8,2,10-12 o 2n-1)
 
 
 #multiTool
 multiTool.title=Multi-herramienta PDF
 multiTool.header=Multi-herramienta PDF
-multiTool.uploadPrompts=Nombre del archivo
+multiTool.uploadPrompts=File Name
 
 #view pdf
 viewPdf.title=Ver PDF
@@ -927,7 +926,7 @@ pdfToImage.color=Color
 pdfToImage.grey=Escala de grises
 pdfToImage.blackwhite=Blanco y Negro (¡Puede perder datos!)
 pdfToImage.submit=Convertir
-pdfToImage.info=Python no está instalado. Se requiere para la conversión WebP.
+pdfToImage.info=Python is not installed. Required for WebP conversion.
 
 
 #addPassword
@@ -964,7 +963,7 @@ watermark.selectText.6=Alto (Espacio entre cada marca de agua verticalmente):
 watermark.selectText.7=Opacidad (0% - 100%):
 watermark.selectText.8=Tipo de marca de agua:
 watermark.selectText.9=Imagen de marca de agua:
-watermark.selectText.10=Convertir PDF a imagen PDF
+watermark.selectText.10=Convert PDF to PDF-Image
 watermark.submit=Añadir marca de agua
 watermark.type.1=Texto
 watermark.type.2=Imagen
@@ -1147,16 +1146,7 @@ error.discordSubmit=Discord - Enviar mensaje de soporte
 
 
 #remove-image
-removeImage.title=Eliminar imagen
-removeImage.header=Eliminar imagen
-removeImage.removeImage=Eliminar imagen
-removeImage.submit=Eliminar imagen
-
-test=1
-test2=2
-test3=3
-test4=4
-test5=5
-test6=6
-test7=7
-test8=8
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
