--- a/src/main/resources/messages_ro_RO.properties
+++ b/src/main/resources/messages_ro_RO.properties
@@ -291,7 +291,7 @@ compressPdfs.tags=squish,small,tiny
 
 home.changeMetadata.title=Schimbă Metadatele
 home.changeMetadata.desc=Schimbă/Elimină/Adaugă metadate într-un document PDF.
-changeMetadata.tags==Title,author,date,creation,time,publisher,producer,stats
+changeMetadata.tags=Title,author,date,creation,time,publisher,producer,stats
 
 home.fileToPDF.title=Convertește fișierul în PDF
 home.fileToPDF.desc=Convertește aproape orice fișier în format PDF (DOCX, PNG, XLS, PPT, TXT și altele).
@@ -775,6 +775,7 @@ ScannerImageSplit.selectText.7=Arie minimă a conturului:
 ScannerImageSplit.selectText.8=Stabilește pragul minim de arie a conturului pentru o fotografie.
 ScannerImageSplit.selectText.9=Mărimea marginii:
 ScannerImageSplit.selectText.10=Stabilește mărimea marginii adăugate și eliminate pentru a evita marginile albe în rezultat (implicit: 1).
+ScannerImageSplit.info=Python is not installed. It is required to run.
 
 
 #OCR
@@ -925,6 +926,7 @@ pdfToImage.color=Culoare
 pdfToImage.grey=Scală de gri
 pdfToImage.blackwhite=Alb și negru (Poate pierde date!)
 pdfToImage.submit=Convertă
+pdfToImage.info=Python is not installed. Required for WebP conversion.
 
 
 #addPassword
